--- a/templates/prev-create.html
+++ b/templates/prev-create.html
@@ -10,6 +10,8 @@
     <header>
         <img src="icon.png">
 		<h2 class="title">落単回避！</h2>
+        アカウント名
+        ログアウト
     </header>
 
     <center><h1>アカウント作成</h1></center>
