--- a/templates/attend-prev.html
+++ b/templates/attend-prev.html
@@ -13,15 +13,7 @@
 		<h2 class="title">落単回避！</h2>
     </header>
     
-    <center><h1>履修状況登録</h1></center>
-    <center>
-        <form action="#" method="post">
-            科目番号、科目名などで検索
-            <input type="text" name="keyword" value="" size="15" />
-            <input type="hidden" name="bid" value="%{BID}" />
-            <input type="submit" name="ACMS_POST_2GET" value="検索" />
-        </form>
-    </center>
+    <center><h1>出欠席確認</h1></center>
     
     <table>
         <tr>
@@ -46,7 +38,7 @@
             <th>GExxxxx</th>
             <th>月56</th>
             <th>ABC概論</th>
-            <th>出席回数</th>
+            <th>1</th>
             <th><button type="button">出席</button></th>
         </tr>
     </table>
