--- a/templates/class-detale.html
+++ b/templates/class-detale.html
@@ -12,11 +12,20 @@
             <h2 class="title">落単回避！</h2>
         </header>
         
-        <h2>ABC概論</h2>
-        科目番号:GExxxxx
-        時限:春AB
-        月56
-        教室名:7Axxx
+        ABC概論<button type="button"><a href="">✕</a></button><br>
+        科目番号:GExxxxx<br>
+        時限:春AB<br>
+        月56<br>
+        教室名:7Axxx<br>
+        出席回数
+        <button type="button">－</button>1<button type="button">+</button><br>
+        アラーム通知
+        <select name="sound">
+            <option>10分前</option>
+            <option>30分前</option>
+            <option>60分前</option>
+        </select>
+        前に通知
 
     </body>
 </html>
