--- a/templates/add_comp.html
+++ b/templates/add_comp.html
@@ -10,6 +10,10 @@
         <header>
             <img src="icon.png">
             <h2 class="title">落単回避！</h2>
+            <ul>
+                <li><a href="#">アカウント名</a></li>
+                <li><a href="#">ログアウト</a></li>
+            </ul>
         </header>
         
         <center><h1>検索結果</h1></center>
