--- a/templates/prev-create.html
+++ b/templates/prev-create.html
@@ -10,19 +10,23 @@
     <header>
         <img src="icon.png">
 		<h2 class="title">落単回避！</h2>
-        アカウント名
-        ログアウト
     </header>
 
     <center><h1>アカウント作成</h1></center>
     ユーザ名<br>
-    <input type="text" name="name"><br>
+    <form action="#" method="post">
+        <input type="text" name="user">
+    </form>
     メールアドレス<br>
-    <input type="text" name="name"><br>
+    <form action="#" method="post">
+        <input type="text" name="name">
+    </form>
     パスワード<br>
-    <input type="text" name="name"><br>
+    <form action="#" method="post">
+        <input type="text" name="name">
+    </form>
 
-    <center><button type="button">作成する</button></center>
+    <center><button onclick="location.href"="#">作成する</button></center>
 
     <li class="menu-item"><a href="#">アカウントをお持ちの方はこちら</a></li>
 
