--- a/templates/prev-login.html
+++ b/templates/prev-login.html
@@ -14,11 +14,15 @@
 
     <center><h1>ログイン</h1></center>
     メールアドレス<br>
-    <input type="text" name="name"><br>
+    <form action="#" method="post">
+        <input type="text" name="mail">
+    </form>
     パスワード<br>
-    <input type="text" name="name"><br>
+    <form action="#" method="post">
+        <input type="text" name="pass">
+    </form>
 
-    <center><button type="button">ログイン</button></center>
+    <center></center><button onclick="location.href"="#">ログイン</button></center>
 
 </body>
 </html>
