--- a/templates/prev-main.html
+++ b/templates/prev-main.html
@@ -10,6 +10,10 @@
         <header>
             <img src="icon.png">
 		    <h2 class="title">落単回避！</h2>
+            <ul>
+                <li><a href="#">アカウント名</a></li>
+                <li><a href="#">ログアウト</a></li>
+            </ul>
         </header>
 
         <center><h1>タイトル</h1></center>
@@ -17,12 +21,12 @@
 
         <table>
             <tr>
-                <td><button type="button">履修登録確認</button></td>
-                <td><button type="button">出欠席確認</button</td>>
+                <td><button onclick="location.href"="#">履修登録確認</button></td>
+                <td><button onclick="location.href"="#">出欠席確認</button</td>>
             </tr>
             <tr>
-                <td><button type="button">アラーム設定</button></td>
-                <td><button type="button">その他の設定</button</td>>
+                <td><button onclick="location.href"="#">アラーム設定</button></td>
+                <td><button onclick="location.href"="#">その他の設定</button</td>>
             </tr>
         </table>
 
