--- a/templates/search-confirm.html
+++ b/templates/search-confirm.html
@@ -10,6 +10,10 @@
         <header>
             <img src="icon.png">
             <h2 class="title">落単回避！</h2>
+            <ul>
+                <li><a href="#">アカウント名</a></li>
+                <li><a href="#">ログアウト</a></li>
+            </ul>
         </header>
         
         <center><h1>検索結果</h1></center>
@@ -17,6 +21,6 @@
         <center>科目名：ABC概論</center>
         <center>曜日時限：月56</center>
         <center>教室名：7Axxx</center>
-        <center><button type="button">追加する</button></center>
+        <center><button onclick="location.href"="#">追加する</button></center>
     </body>
 </html>
