--- a/templates/attend-prev.html
+++ b/templates/attend-prev.html
@@ -11,6 +11,10 @@
     <header>
         <img src="icon.png">
 		<h2 class="title">落単回避！</h2>
+        <ul>
+            <li><a href="#">アカウント名</a></li>
+            <li><a href="#">ログアウト</a></li>
+        </ul>
     </header>
     
     <center><h1>出欠席確認</h1></center>
