--- a/templates/class-detale.html
+++ b/templates/class-detale.html
@@ -10,6 +10,10 @@
         <header>
             <img src="icon.png">
             <h2 class="title">落単回避！</h2>
+            <ul>
+                <li><a href="#">アカウント名</a></li>
+                <li><a href="#">ログアウト</a></li>
+            </ul>
         </header>
         
         ABC概論<button type="button"><a href="">✕</a></button><br>
