--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -10,6 +10,10 @@
         <header>
             <img src="icon.png">
             <h2 class="title">落単回避！</h2>
+            <ul>
+                <li><a href="#">アカウント名</a></li>
+                <li><a href="#">ログアウト</a></li>
+            </ul>
         </header>
         
         <center><h1>検索結果</h1></center>
@@ -25,7 +29,7 @@
                 <td>GExxxxx</td>
                 <td>月56</td>
                 <td>ABC概論</td>
-                <td><button type="button">追加</button></td>
+                <td><button onclick="location.href"="#">追加</button></td>
             </tr>
         </table>
     </body>
