#5 のユーザー認証を実装し、ユーザー作成→ユーザーログイン→メインの作成 まで行った

--- a/templates/prev-create.html
+++ b/templates/prev-create.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<title>落単回避アプリ</title>
-	<link rel="stylesheet" href="create-style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>落単回避アプリ</title>
+    <link rel="stylesheet" href="create-style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
-        アカウント名
-        ログアウト
+      <img src="icon.png" />
+      <h2 class="title">落単回避！</h2>
+      アカウント名 ログアウト
     </header>
 
     <center><h1>アカウント作成</h1></center>
-    ユーザ名<br>
-    <input type="text" name="name"><br>
-    メールアドレス<br>
-    <input type="text" name="name"><br>
-    パスワード<br>
-    <input type="text" name="name"><br>
+    <form action="/user/signup" method="POST">
+      メールアドレス<br />
+      <input type="text" name="email" /><br />
+      パスワード<br />
+      <input type="password" name="password" /><br />
 
-    <center><button type="button">作成する</button></center>
+      <center><button type="submit">作成する</button></center>
+    </form>
 
     <li class="menu-item"><a href="#">アカウントをお持ちの方はこちら</a></li>
-
-</body>
+  </body>
 </html>
