--- a/templates/prev-create.html
+++ b/templates/prev-create.html
@@ -9,26 +9,31 @@
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
+		<p class="title">Tsuku-Alart</p>
     </header>
 
-    <center><h1>アカウント作成</h1></center>
-    ユーザ名<br>
-    <form action="#" method="post">
-        <input type="text" name="user">
-    </form>
-    メールアドレス<br>
-    <form action="#" method="post">
+    <center><p class="page-title">アカウント作成</p></center>
+    <div class="square">
+    <p class="form-name">メールアドレス</p>
+    <center>
+    <form class="form-move" action="#" method="post">
         <input type="text" name="name">
     </form>
-    パスワード<br>
-    <form action="#" method="post">
+    </center>
+    <p class="form-name">パスワード</p>
+    <center>
+    <form class="form-move" action="#" method="post">
         <input type="text" name="name">
     </form>
+    </center>
 
-    <center><button onclick="location.href"="#">作成する</button></center>
+    <center><button class="for-button" onclick="location.href"="#">作成する</button></center>
 
-    <li class="menu-item"><a href="#">アカウントをお持ちの方はこちら</a></li>
+    </div>
+
+    <center><li class="menu-item"><a href="#">アカウントをお持ちの方はこちら</a></li></center>
+
+
 
 </body>
 </html>
