ログイン時に表示されるトップページ (履修状況登録ページ等へのリンクが存在する) を実装する

--- a/templates/prev-main.html
+++ b/templates/prev-main.html
@@ -32,5 +32,10 @@
             <p>manaba<a href="https://www.ecloud.tsukuba.ac.jp/manaba">https://www.ecloud.tsukuba.ac.jp/manaba</a></p>
             <p>kdbっぽいなにか<a href="https://make-it-tsukuba.github.io/alternative-tsukuba-kdb/">https://make-it-tsukuba.github.io/alternative-tsukuba-kdb/</a></p>
         </footer>
+
+        <!-- ユーザーのメールアドレスを表示 -->
+        <div>
+            <p>現在ログイン中のユーザー: {{ user_email }}</p>
+        </div>
     </body>
 </html>
