--- a/statics/create-style.css
+++ b/statics/create-style.css
@@ -65,3 +65,8 @@ header{
         border-radius: 30px;
         background-position:center;
     }
+
+    .pass-forget{
+        position:relative;
+        top: 30px
+    }
