--- a/templates/pass-forget1.html
+++ b/templates/pass-forget1.html
@@ -3,25 +3,29 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>落単回避アプリ</title>
-	<link rel="stylesheet" href="situation-style.css">
+	<title>パスワード再設定 | Tsuku-Alert</title>
+	<link rel="stylesheet" href="create-style.css">
 </head>
 
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
+		<h2 class="title">Tsuku-Alert</h2>
     </header>
 
-    <center><h1>パスワード再設定</h1></center>
+    <center><p class="page-title" >パスワード再設定</p></center>
+    <div class="square">
     <center>
-        パスワード再設定のためメールを送信します。<br>
-        登録したメールアドレスを入力してください
-        メールアドレス
-        <form action="" method="post">
+        <p class="pass-forget">パスワード再設定のためメールを送信します。<br>
+        登録したメールアドレスを入力してください。</p>
+    </center>
+        <p class="form-name">メールアドレス</p>
+    <center>
+        <form class="form-move" action="" method="post">
             <input type="text" name="mail">
         </form>
-        <button type="button">送信する</button>
+        <button class="for-button" type="button">送信する</button>
     </center>
+    </div>
 </body>
 </html>
