--- a/templates/pass-forget2.html
+++ b/templates/pass-forget2.html
@@ -3,24 +3,28 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>落単回避アプリ</title>
-	<link rel="stylesheet" href="situation-style.css">
+	<title>パスワード再設定 | Tsuku-Alert</title>
+	<link rel="stylesheet" href="create-style.css">
 </head>
 
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
+		<h2 class="title">Tsuku-Alert</h2>
     </header>
 
-    <center><h1>パスワード再設定</h1></center>
+    <center><p class="page-title">パスワード再設定</p></center>
+    <div class="square">
     <center>
-        新しいパスワードを設定してください。<br>
-        新しいパスワード：
-        <form action="" method="post">
+        <p class="pass-forget">新しいパスワードを設定してください。</p>
+    </center>
+        <p class="form-name">新しいパスワード</p>
+    <center>
+        <form class="form-move" action="" method="post">
             <input type="password" name="repass">
         </form>
-        <button type="button">変更する</button>
+        <button class="for-button" type="button">変更する</button>
     </center>
+    </div>
 </body>
 </html>
