--- a/templates/pass-forget3.html
+++ b/templates/pass-forget3.html
@@ -3,19 +3,19 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>落単回避アプリ</title>
-	<link rel="stylesheet" href="situation-style.css">
+	<title>パスワード再設定完了 | Tsuku-Alert</title>
+	<link rel="stylesheet" href="create-style.css">
 </head>
 
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
+		<h2 class="title">Tsuku-Alert</h2>
     </header>
 
     <center>
-        <h1>パスワードを変更しました</h1>
-        <button type="button">ログイン画面に戻る</button>
+        <h1 class="page-title">パスワードを変更しました</h1>
+        <button class="for-button" type="button">ログイン画面に戻る</button>
     </center>
 </body>
 </html>
