--- a/templates/prev-login.html
+++ b/templates/prev-login.html
@@ -2,22 +2,22 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>落単回避アプリ</title>
+	<title>Tsuku-Alert</title>
 	<link rel="stylesheet" href="create-style.css">
 </head>
 
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
+		<h2 class="title">Tsuku-Alert</h2>
     </header>
 
-    <center><h1>ログイン</h1></center>
-    メールアドレス<br>
+    <center><p class="page-title">ログイン</p></center>
+    <p class="form-name">メールアドレス</p>
     <form action="#" method="post">
         <input type="text" name="mail">
     </form>
-    パスワード<br>
+    <p class="form-name">パスワード</p>
     <form action="#" method="post">
         <input type="text" name="pass">
     </form>
