--- a/templates/search-confirm.html
+++ b/templates/search-confirm.html
@@ -2,25 +2,32 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>落単回避アプリ</title>
-        <link rel="stylesheet" href="prevstyle1.css">
+        <title>検索結果 | Tsuku-Alert</title>
+        <link rel="stylesheet" href="confirm-style.css">
     </head>
 
     <body>
         <header>
             <img src="icon.png">
-            <h2 class="title">落単回避！</h2>
-            <ul>
-                <li><a href="#">アカウント名</a></li>
-                <li><a href="#">ログアウト</a></li>
-            </ul>
+            <h2 class="title">Tsuku-Alert</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">ログアウト</a></li>
+                </ul>
+            </nav>
         </header>
-        
-        <center><h1>検索結果</h1></center>
-        <center>この授業を追加しますか？</center>
-        <center>科目名：ABC概論</center>
-        <center>曜日時限：月56</center>
-        <center>教室名：7Axxx</center>
-        <center><button onclick="location.href"="#">追加する</button></center>
+
+        <center>
+        <div class="triangle">
+        </div>
+        <p class="page-title">検索結果</p>
+        </center>
+        <div class="square">
+        <center><p class="confirm-text">この授業を追加しますか？</p></center>
+        <center><p class="normal-text">科目名：ABC概論</p></center>
+        <center><p class="normal-text">曜日時限：月56</p></center>
+        <center><p class="normal-text">教室名：7Axxx</p></center>
+        <center><button class="for-button" type="button">追加する</button></center>
+        </div>
     </body>
 </html>
