--- a/templates/prev-login.html
+++ b/templates/prev-login.html
@@ -2,27 +2,35 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>Tsuku-Alert</title>
-	<link rel="stylesheet" href="create-style.css">
+	<title>Tsuku-Alart</title>
+	<link rel="stylesheet" href="login-style.css">
 </head>
 
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">Tsuku-Alert</h2>
+		<h2 class="title">Tsuku-Alart</h2>
     </header>
 
     <center><p class="page-title">ログイン</p></center>
+    <div class="square">
     <p class="form-name">メールアドレス</p>
-    <form action="#" method="post">
+    <center>
+    <form class="form-move" action="#" method="post">
         <input type="text" name="mail">
     </form>
+    </center>
     <p class="form-name">パスワード</p>
-    <form action="#" method="post">
+    <center>
+    <form class="form-move" action="#" method="post">
         <input type="text" name="pass">
     </form>
+    </center>
 
-    <center></center><button onclick="location.href"="#">ログイン</button></center>
+    <center><button class="for-button" onclick="location.href"="#">ログイン</button></center>
 
+    </div>
+
+    <center><li class="menu-item"><a href="#">アカウントをお持ちでない方はこちら</a></li></center>
 </body>
 </html>
