--- a/templates/attend-prev.html
+++ b/templates/attend-prev.html
@@ -3,34 +3,42 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>落単回避アプリ</title>
-	<link rel="stylesheet" href="situation-style.css">
+	<title>出欠席確認 | Tsuku-Alert</title>
+	<link rel="stylesheet" href="sit-style.css">
 </head>
 
 <body>
     <header>
         <img src="icon.png">
-		<h2 class="title">落単回避！</h2>
-        <ul>
-            <li><a href="#">アカウント名</a></li>
-            <li><a href="#">ログアウト</a></li>
-        </ul>
+		<h2 class="title">Tsuku-Alert</h2>
+        <nav>
+            <ul>
+                <li><a href="#">ログアウト</a></li>
+            </ul>
+        </nav>
     </header>
     
-    <center><h1>出欠席確認</h1></center>
+    <center>
+        <div class="triangle">
+        </div>
+        <p class="page-title">出欠席確認</p>
+    </center>
     
-    <table>
+    <center>
+    <table class="table-btn">
         <tr>
-            <td><button type="button">春A</button></td>
-            <td><button type="button">春B</button></td>
-            <td><button type="button">春C</button></td>
-            <td><button type="button">秋A</button></td>
-            <td><button type="button">秋B</button></td>
-            <td><button type="button">秋C</button></td>
+            <td><button class="for-button" type="button">春A</button></td>
+            <td><button class="for-button" type="button">春B</button></td>
+            <td><button class="for-button" type="button">春C</button></td>
+            <td><button class="for-button" type="button">秋A</button></td>
+            <td><button class="for-button" type="button">秋B</button></td>
+            <td><button class="for-button" type="button">秋C</button></td>
         </tr>
     </table>
+    </center>
 
-    <table>
+    <center>
+    <table class="table-design">
         <tr>
             <th>科目番号</th>
             <th>曜日時限</th>
@@ -43,8 +51,17 @@
             <th>月56</th>
             <th>ABC概論</th>
             <th>1</th>
-            <th><button type="button">出席</button></th>
+            <th><button class="for-add" type="button">出席</button></th>
+        </tr>
+        <tr>
+        <th>GExxxxx</th>
+            <th>火34</th>
+            <th>DEF演習</th>
+            <th>1</th>
+            <th><button class="for-add" type="button">出席</button></th>
         </tr>
     </table>
+    </center>
+    
 </body>
 </html>
