--- a/templates/prev-main.html
+++ b/templates/prev-main.html
@@ -2,39 +2,49 @@
 <html lang="ja">
     <head>
 	    <meta charset="UTF-8">
-	    <title>落単回避アプリ</title>
-	    <link rel="stylesheet" href="create-style.css">
+	    <title>ホーム | Tsuku-Alert</title>
+	    <link rel="stylesheet" href="main-style.css">
     </head>
 
     <body>
         <header>
             <img src="icon.png">
-		    <h2 class="title">落単回避！</h2>
+		    <h2 class="title">Tsuku-Alert</h2>
             <ul>
                 <li><a href="#">アカウント名</a></li>
                 <li><a href="#">ログアウト</a></li>
             </ul>
         </header>
+    <div class="wrapper">
+        <center>
+        <div class="triangle">
+        </div>
+        </center>
+        <center><p class="page-title">Tsuku-Alert</p></center>
+        <center>
+            <p class="exp"><span class="bold">「Tsuku-Alert」</span>は筑波大生のための<span Class="bold">スマート授業通知システム</span>です。</p>
+            <p class="exp"><span class="bold">授業場所・時間・出席確認</span>を通知します。</p>
+        </center>
 
-        <center><h1>タイトル</h1></center>
-        <center>説明とかを書く場所！いろいろ書く！</center>
-
+        <center>
         <table>
             <tr>
-                <td><button onclick="location.href"="#">履修登録確認</button></td>
-                <td><button onclick="location.href"="#">出欠席確認</button</td>>
+                <td><button class="btn-1" onclick="location.href"="#">履修登録確認</button></td>
+                <td><button class="btn-2" onclick="location.href"="#">出欠席確認</button</td>
             </tr>
             <tr>
-                <td><button onclick="location.href"="#">アラーム設定</button></td>
-                <td><button onclick="location.href"="#">その他の設定</button</td>>
+                <td><button class="btn-3" onclick="location.href"="#">アラーム設定</button></td>
+                <td><button class="btn-4" onclick="location.href"="#">その他の設定</button</td>
             </tr>
         </table>
+        </center>
 
         <footer>
-            <h2>Links</h2>
-            <p>twins<a href="https://twins.tsukuba.ac.jp/campusweb/campusportal.do">https://twins.tsukuba.ac.jp/campusweb/campusportal.do</a></p>
-            <p>manaba<a href="https://www.ecloud.tsukuba.ac.jp/manaba">https://www.ecloud.tsukuba.ac.jp/manaba</a></p>
-            <p>kdbっぽいなにか<a href="https://make-it-tsukuba.github.io/alternative-tsukuba-kdb/">https://make-it-tsukuba.github.io/alternative-tsukuba-kdb/</a></p>
+            <h2 class="links">Links</h2>
+            <p class="link">twins：<a href="https://twins.tsukuba.ac.jp/campusweb/campusportal.do">https://twins.tsukuba.ac.jp/campusweb/campusportal.do</a></p>
+            <p class="link">manaba：<a href="https://www.ecloud.tsukuba.ac.jp/manaba">https://www.ecloud.tsukuba.ac.jp/manaba</a></p>
+            <p class="link">kdbっぽいなにか：<a href="https://make-it-tsukuba.github.io/alternative-tsukuba-kdb/">https://make-it-tsukuba.github.io/alternative-tsukuba-kdb/</a></p>
         </footer>
+    </div>
     </body>
 </html>
