--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -2,35 +2,48 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>落単回避アプリ</title>
-        <link rel="stylesheet" href="prevstyle1.css">
+        <title>検索結果 | Tsuku-Alert</title>
+        <link rel="stylesheet" href="sit-style.css">
     </head>
 
     <body>
         <header>
             <img src="icon.png">
-            <h2 class="title">落単回避！</h2>
-            <ul>
-                <li><a href="#">アカウント名</a></li>
-                <li><a href="#">ログアウト</a></li>
-            </ul>
+            <h2 class="title">Tsuku-Alert</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">ログアウト</a></li>
+                </ul>
+            </nav>
         </header>
         
-        <center><h1>検索結果</h1></center>
+        <center>
+            <div class="triangle">
+            </div>
+            <p class="page-title">検索結果</p>
+        </center>
 
-        <table>
+        <center>
+        <table class="table-design">
             <tr>
-                <td>科目番号</td>
-                <td>曜日時限</td>
-                <td>科目名</td>
-                <td>追加</td>
+                <th>科目番号</th>
+                <th>曜日時限</th>
+                <th>科目名</th>
+                <th>追加</th>
             </tr>
             <tr>
-                <td>GExxxxx</td>
-                <td>月56</td>
-                <td>ABC概論</td>
-                <td><button onclick="location.href"="#">追加</button></td>
+                <th>GExxxxx</th>
+                <th>月56</th>
+                <th>ABC概論</th>
+                <th><button class="for-add" type="button">追加</button></th>
+            </tr>
+            <tr>
+                <th>GExxxxx</th>
+                <th>火34</th>
+                <th>DEF演習</th>
+                <th><button class="for-add" type="button">追加</button></th>
             </tr>
         </table>
+        </center>
     </body>
 </html>
