--- a/templates/prev-create.html
+++ b/templates/prev-create.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>Tsuku-Alart</title>
+	<title>アカウント作成 | Tsuku-Alart</title>
 	<link rel="stylesheet" href="create-style.css">
 </head>
 
