--- a/statics/create-style.css
+++ b/statics/create-style.css
@@ -9,6 +9,19 @@ header{
     body{
         margin:0;
     }
+
+    a{
+        font-weight:bold;
+        text-decoration:none;
+    }
+
+    a:link{
+        color: #000;
+    }
+
+    a:hover{
+        color:#ff8052;
+    }
     
     .title{
         margin-right:auto;
