--- a/statics/first-style.css
+++ b/statics/first-style.css
@@ -82,16 +82,14 @@ header{
         font-weight: bold;
     }
 
-    .triangle {
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-top: 150px solid transparent;
-        border-bottom: 150px solid transparent;
-        border-right: 600px solid #e5e5e5;
-        border-left: 0;
-        text-align: right;
+    .for-triangle {
+        display: flex;
+        justify-content: flex-end;
       }
+
+      .trisize{
+        width:90%;
+    }
 
     .explain{
         position: absolute;
