--- a/templates/prev-login.html
+++ b/templates/prev-login.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>Tsuku-Alart</title>
+	<title>ログイン | Tsuku-Alart</title>
 	<link rel="stylesheet" href="login-style.css">
 </head>
 
