--- a/templates/mypage-prev.html
+++ b/templates/mypage-prev.html
@@ -31,7 +31,7 @@
             <input type="password" name="newpass">
         </form>
         <button type="button">変更</button><br>
-    <p><a href="">パスワードを忘れた場合</a></p>
+        <p><a href="/user/main/others-settings/forgetpass">パスワードお忘れの方</a></p>
     画面表示：
         <select name="darkmode">
             <option>ダークモード</option>
